# shminimaxing

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  run_tests.sh
src/: compute_quarto_magic.py  game.cpp  game.h  library.cpp  library.h  saved_states.cpp  saved_states.h  search.cpp  search.h  symmetries.h  tests.cpp
